# Hospitalbot-Path-Planning

./: .gitignore  README.md
hospital_robot_spawner/: package.xml  setup.cfg  setup.py
hospital_robot_spawner/backup/: actor_laser.sdf  get_laser_reads.py  get_robot_pose.py  global_parameter_server_node.py  hospitalbot_parameters.yaml  model_works_2wd.sdf  model_works_4wd.sdf  move_robot.py  reset_node.py  reset_simulation.py  spawn_demo.py
hospital_robot_spawner/config/: training_parameters.yaml
hospital_robot_spawner/hospital_robot_spawner/: hospitalbot_env.py  hospitalbot_simplified_env.py  reset_node.py  robot_controller.py  spawn_demo.py  start_training.py  trained_agent.py
hospital_robot_spawner/launch/: discretized_hospital.launch.py  gazebo_world.launch.py  headless_world.launch.py  start_training.launch.py  test.launch.py  trained_agent.launch.py
hospital_robot_spawner/logs/DDPG_100000_adaptive_rand_targ_0/: events.out.tfevents.1675445990.tom-ubuntu-X556UAK.248406.1
hospital_robot_spawner/logs/DDPG_150000_adaptive_rand_targ_0/: events.out.tfevents.1675447984.tom-ubuntu-X556UAK.248406.2
hospital_robot_spawner/logs/DDPG_200000_adaptive_rand_targ_0/: events.out.tfevents.1675449842.tom-ubuntu-X556UAK.248406.3
hospital_robot_spawner/logs/DDPG_250000_adaptive_rand_targ_0/: events.out.tfevents.1675451897.tom-ubuntu-X556UAK.248406.4
hospital_robot_spawner/logs/PPO_0.000037/: events.out.tfevents.1677326493.tom-ubuntu-X556UAK.1392652.0
hospital_robot_spawner/worlds/: hospital.world  hospital_discretized.world  hospital_training.world  test.world
(+175 files in other folders)
